# stellar-router

./: Cargo.toml  README.md
api-server/: Cargo.toml
api-server/src/: handlers.rs  main.rs  rpc.rs  tests.rs  types.rs  websocket.rs
contracts/router-quote/: Cargo.toml
contracts/router-quote/src/: lib.rs
contracts/router-registry/: test_output.txt
contracts/router-registry/src/: lib.rs
contracts/router-timelock/src/: lib.rs
docs/: api-reference.md  deployment.md  metrics.md  security.md
integration-tests/src/: lib.rs
integration-tests/tests/: failure_scenarios.rs  integration_tests.rs
integration-tests/tests/integration/: failure_scenarios.rs  full_flow_test.rs
metrics/: Cargo.toml
